# rust-ffmpeg

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
.github/workflows/: Kite  build.yml  release.yml
examples/: avi-to-ppm.rs  chapters.rs  codec-info.rs  dump-frames.rs  fps-filter.rs  metadata.rs  remux.rs  transcode-audio.rs  transcode-qsv.rs  transcode-x264.rs
src/: lib.rs
src/codec/: audio.rs  audio_service.rs  capabilities.rs  codec.rs  compliance.rs  context.rs  debug.rs  decoder.rs  discard.rs  encoder.rs  field_order.rs  flag.rs  id.rs  mod.rs  parameters.rs  picture.rs  profile.rs  subtitle.rs  threading.rs  traits.rs  video.rs
src/codec/decoder/: audio.rs  check.rs  conceal.rs  decoder.rs  mod.rs  opened.rs  slice.rs  subtitle.rs  video.rs
src/codec/encoder/: audio.rs  comparison.rs  decision.rs  encoder.rs  mod.rs  motion_estimation.rs  prediction.rs  subtitle.rs  video.rs
src/codec/packet/: borrow.rs  flag.rs  mod.rs  packet.rs  side_data.rs  traits.rs
src/codec/subtitle/: flag.rs  mod.rs  rect.rs  rect_mut.rs
src/device/: extensions.rs  input.rs  mod.rs  output.rs
src/filter/: filter.rs  flag.rs  graph.rs  mod.rs  pad.rs
src/filter/context/: context.rs  mod.rs  sink.rs  source.rs
src/format/: context.rs  format.rs  mod.rs  network.rs  stream.rs
src/format/chapter/: chapter.rs  chapter_mut.rs  mod.rs
src/format/context/: common.rs  destructor.rs  input.rs  mod.rs  output.rs  stream_io.rs
src/format/format/: flag.rs  input.rs  iter.rs  mod.rs  output.rs
src/format/stream/: disposition.rs  mod.rs  stream.rs  stream_mut.rs
src/software/: mod.rs
src/software/resampling/: context.rs  delay.rs  dither.rs  engine.rs  extensions.rs  filter.rs  flag.rs  mod.rs
src/software/scaling/: capability.rs  color_space.rs  context.rs  extensions.rs  filter.rs  flag.rs  mod.rs  support.rs  vector.rs
src/util/: channel_layout.rs  color_range.rs  color_space.rs  dictionary.rs  error.rs  hardware.rs  interrupt.rs  legacy_channel_layout.rs  media.rs  mod.rs  picture.rs  pixel_format.rs  range.rs  rational.rs  sample_format.rs  samples.rs  time.rs  timebase.rs
src/util/chroma/: location.rs  mod.rs
src/util/color/: mod.rs  primaries.rs  range.rs  space.rs  transfer_characteristic.rs
src/util/dictionary/: immutable.rs  iter.rs  mod.rs  mutable.rs  owned.rs
src/util/format/: mod.rs  pixel.rs  sample.rs
src/util/frame/: audio.rs  decode_error.rs  flag.rs  mod.rs  side_data.rs  video.rs
src/util/log/: callback.rs  flag.rs  level.rs  mod.rs
src/util/mathematics/: mod.rs  rescale.rs  rounding.rs
src/util/option/: mod.rs  traits.rs
tests/: audio_frame_slices.rs  buffersink_reuse.rs  send_rc_race.rs  stream_io.rs
