[package]
name    = "ffmpeg"
version = "0.1.1"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "Safe FFmpeg wrapper"
repository  = "https://github.com/meh/rust-ffmpeg"
keywords    = ["audio", "video"]

[features]
default = ["codec", "device", "filter", "format", "resampling", "postprocessing", "software-resampling", "software-scaling"]

static              = ["ffmpeg-sys/static"]
codec               = ["ffmpeg-sys/avcodec"]
device              = ["ffmpeg-sys/avdevice", "format"]
filter              = ["ffmpeg-sys/avfilter"]
format              = ["ffmpeg-sys/avformat", "codec"]
resampling          = ["ffmpeg-sys/avresample"]
postprocessing      = ["ffmpeg-sys/postproc"]
software-resampling = ["ffmpeg-sys/swresample"]
software-scaling    = ["ffmpeg-sys/swscale", "codec"]

[dependencies]
libc     = "0.1"
bitflags = "0.3"

[dependencies.image]
version  = "*"
optional = true

[dependencies.ffmpeg-sys]
version = "2.7.0"

default-features = false
